# rscm

./: Cargo.toml  GRAMMAR.txt  README.md  justfile
.cargo/: config.toml
.github/workflows/: ci.yaml
examples/: factorial.rscm  factorial.scm
src/: ast.rs  compiler.rs  lexer.rs  main.rs  parser.rs  position.rs  token.rs  token_kind.rs
tests/: integration.rs
