[package]
name = "rscm"
version = "0.0.0"
description = "A scheme compiler"
edition = "2024"

[dependencies]
inkwell = { version = "0.5.0", features = ["llvm18-0"] }
indoc = "2.0.6"
clap = { version = "4.5.35", features = ["derive"] }
tempfile = "3.19.1"
thiserror = "2.0.12"

[dev-dependencies]
executable-path = "1.0.0"
pretty_assertions = "1.4.1"
unindent = "0.2.4"
